# cfucr

./: .gitmodules  CMakeLists.txt  startUpScript.sh
configurations/: sampleOneLinkAdaptiveConfig.xml  sampleOneLinkConfig.xml  sampleOneLinkPDControlConfig.xml  sampleOneLinkRobustAdaptiveControl.xml  sampleOneLinkRobustConfig.xml  sampleThreeLinkAdaptiveConfig.xml  sampleThreeLinkPDControlConfig.xml  sampleThreeLinkRobustAdaptiveControl.xml  sampleThreeLinkRobustConfig.xml  sampleTwoLinkAdaptiveConfig.xml  sampleTwoLinkPDControlConfig.xml  sampleTwoLinkRobustAdaptiveControl.xml  sampleTwoLinkRobustConfig.xml
documents/: 1-linkRoboticManipulator.docx  2-linkRoboticManipulator.docx  3-linkRoboticManipulator.docx
filter/: lowPassFilter.cpp  lowPassFilter.hpp
math-utilities/include/: matrix_utilities.hpp
matlab/1-linkManipulator/: OneLinkControlMain.m  OneLinkDynamicsAndControl.m
matlab/1-linkSimulation/: OneLinkDynamics.m  OneLinkSimulationMain.m
matlab/2-linkManipulator/: TwoLinkControlMain.m  TwoLinkDynamics.m  TwoLinkDynamicsAndControl.m
matlab/2-linkSimulation/: TwoLinkDynamics.m  TwoLinkSimulationMain.m
matlab/3-linkManipulator/: ThreeLinkControlMain.m  ThreeLinkDynamics.m  ThreeLinkDynamicsAndControl.m  ThreeLinkDynamicsNoControl.m
matlab/3-linkSimulation/: ThreeLinkDynamics.m  ThreeLinkSimulationMain.m
matlab/filters/: low_pass_filter.m
src/: CMakeLists.txt  controller.cpp  controller.hpp
src/configurator/: CMakeLists.txt  configurator.cpp  configurator.hpp
src/control/: CMakeLists.txt  controlUtilities.cpp  controlUtilities.hpp  oneLinkAdaptiveControl.cpp  oneLinkAdaptiveControl.hpp  oneLinkControl.cpp  oneLinkControl.hpp  oneLinkRobustControl.cpp  oneLinkRobustControl.hpp  pdControl.cpp  pdControl.hpp  threeLinkControl.hpp  twoLinkControl.hpp
src/examples/: CMakeLists.txt  oneLinkAdaptiveExample.cpp  oneLinkExample.cpp  threeLinkExample.cpp  twoLinkExample.cpp
src/filter/: CMakeLists.txt  filter.cpp  filter.hpp  lowPassFilter.cpp  lowPassFilter.hpp
src/mathUtilities/: CMakeLists.txt  matrixUtilities.hpp  matrixUtilties.hpp
src/types/: CMakeLists.txt  oneLinkRobot.hpp  threeLinkRobot.hpp  twoLinkRobot.hpp
types/: oneLinkRobot.hpp  twoLinkRobot.hpp
